quickly addin phone support
